--- a/demouiza2/src/main/res/layout/activity_main.xml
+++ b/demouiza2/src/main/res/layout/activity_main.xml
@@ -4,16 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="@dimen/padding_5"
     tools:context="testlibuiza.uiza.com.demouiza2.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_gravity="center"
+        android:text="Test SDK Uiza" />
 
     <Button
         android:id="@+id/bt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Click" />
+        android:text="Click to Play Video With Uiza Player Screen" />
+
+    <Button
+        android:id="@+id/bt_simple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Simple Uiza Player" />
 </LinearLayout>
