--- a/demouiza2/src/main/res/layout/activity_simple_uiza_player.xml
+++ b/demouiza2/src/main/res/layout/activity_simple_uiza_player.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/padding_5"
     tools:context="testlibuiza.uiza.com.demouiza2.MainActivity">
-    
+
+    <FrameLayout
+        android:id="@+id/container_uiza_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
