--- a/demouiza2/src/main/res/layout/activity_main.xml
+++ b/demouiza2/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/padding_5"
+    android:padding="5dp"
     tools:context="testlibuiza.uiza.com.demouiza2.MainActivity">
 
     <TextView
